trunk/Archive2/64/4e3c3f21682a0a/output
main.cpp:4:19: error: ISO C++11 does not allow conversion from string literal to 'char *' [-Werror,-Wwritable-strings]
    char *hello = "abcdefgh";
                  ^
main.cpp:5:10: warning: unused variable 'c' [-Wunused-variable]
    char c = 'c';
         ^
1 warning and 1 error generated.
